[gd_scene load_steps=5 format=2]

[ext_resource path="res://VPSScenes/Minigame/TamagotchiMinigameScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://VPSScenes/Home/TamagotchiHomeScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://VPSScripts/Device/TamagotchiScreen.gd" type="Script" id=3]
[ext_resource path="res://Resources/Graphics/VPS/Screen.png" type="Texture" id=5]

[node name="Screen" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 3.50618
margin_top = 5.11095
margin_right = 67.5062
margin_bottom = 76.1109
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinigameScreen" parent="." instance=ExtResource( 1 )]

[node name="HomeScreen" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="eat" from="." to="HomeScreen" method="_on_Screen_eat"]
[connection signal="end_sleeping" from="." to="HomeScreen" method="_on_Screen_end_sleeping"]
[connection signal="end_talking" from="." to="HomeScreen" method="_on_Screen_end_talking"]
[connection signal="happy" from="." to="HomeScreen" method="_on_Screen_happy"]
[connection signal="not_sad" from="." to="HomeScreen" method="_on_Screen_not_sad"]
[connection signal="refuse" from="." to="HomeScreen" method="_on_Screen_refuse"]
[connection signal="sad" from="." to="HomeScreen" method="_on_Screen_sad"]
[connection signal="start_sleeping" from="." to="HomeScreen" method="_on_Screen_start_sleeping"]
[connection signal="start_talking" from="." to="HomeScreen" method="_on_Screen_start_talking"]
[connection signal="switch_to_pet" from="." to="HomeScreen" method="_on_Screen_switch_to_pet"]
[connection signal="switch_to_sick" from="." to="HomeScreen" method="_on_Screen_switch_to_sick"]
